# summer-undergraduate-research-fellowship

./: .gitignore  .gitmodules  LICENSE  README.md  notes.md  zhongnan's notes.md
.devcontainer/: Dockerfile  devcontainer.json
go1/: CMakeLists.txt  package.xml
go1/config/: reference.info
go1/include/go1/: ModelSettings.h
go1/launch/: test.launch
go1/src/: load_urdf.cpp
misc/: mx-slides.md  refs.md
ocs2/ocs2_pinocchio/ocs2_centroidal_model/test/include/ocs2_centroidal_model/test/: definitions.h
ocs2/ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt  package.xml
ocs2/ocs2_robotic_examples/ocs2_legged_robot/config/mpc/: task.info
ocs2/ocs2_robotic_examples/ocs2_legged_robot/include/ocs2_legged_robot/: LeggedRobotInterface.h  LeggedRobotPreComputation.h
ocs2/ocs2_robotic_examples/ocs2_legged_robot/include/ocs2_legged_robot/dynamics/: LeggedRobotDynamicsAD.h
ocs2/ocs2_robotic_examples/ocs2_legged_robot/src/: LeggedRobotInterface.cpp
ocs2/ocs2_robotic_examples/ocs2_legged_robot/src/common/: ModelSettings.cpp
ocs2/ocs2_robotic_examples/ocs2_legged_robot/test/: AnymalFactoryFunctions.cpp
ocs2/ocs2_robotic_examples/ocs2_legged_robot/test/constraint/: testEndEffectorLinearConstraint.cpp
ocs2/ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
quadrupedalism/: CMakeLists.txt  package.xml
