<?xml version="1.0"?>
<package format="2">
  <name>go1</name>
  <version>0.0.0</version>
  <description>Porting ETHZ OCS2 to Unitree Go1</description>
  <license>TODO</license>

  <maintainer email="sgmxu9@liverpool.ac.uk">Minghong Xu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend>roslib</depend> -->
  <!-- <depend>tf</depend> -->
  <!-- <depend>urdf</depend> -->
  <!-- <depend>kdl_parser</depend> -->
  <!-- <depend>robot_state_publisher</depend> -->
  <!-- <depend>cmake_modules</depend> -->

  <depend>pinocchio</depend>
  <!-- <depend>ocs2_pinocchio_interface</depend> -->
  <depend>ocs2_core</depend>
  <!-- <depend>ocs2_oc</depend> -->
  <!-- <depend>ocs2_ddp</depend> -->
  <!-- <depend>ocs2_mpc</depend> -->
  <!-- <depend>ocs2_sqp</depend> -->
  <!-- <depend>ocs2_robotic_tools</depend> -->
  <!-- <depend>ocs2_centroidal_model</depend> -->
  <!-- <depend>ocs2_msgs</depend> -->
  <!-- <depend>ocs2_legged_robot</depend> -->
  <!-- <depend>ocs2_ros_interfaces</depend> -->

</package>
